@@ -12,7 +12,6 @@ import org.tinyradius.core.packet.RadiusPacket;
 
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
 import static org.tinyradius.core.packet.PacketType.*;
 
 public interface RadiusResponse extends RadiusPacket<RadiusResponse> {
@@ -41,7 +40,7 @@ public interface RadiusResponse extends RadiusPacket<RadiusResponse> {
     static RadiusResponse create(Dictionary dictionary, byte type, byte id, byte[] authenticator, List<RadiusAttribute> attributes) throws RadiusPacketException {
         List<RadiusAttribute> wrappedAttributes = attributes.stream()
                 .map(NestedAttributeHolder::vsaAutowrap)
-                .collect(toList());
+                .toList();
         final ByteBuf header = RadiusPacket.buildHeader(type, id, authenticator, wrappedAttributes);
         return create(dictionary, header, wrappedAttributes);
     }
