@@ -32,7 +32,6 @@ import java.net.InetSocketAddress;
 import java.util.List;
 import java.util.Map;
 
-import static java.util.stream.Collectors.toList;
 import static org.tinyradius.core.packet.PacketType.ACCESS_REQUEST;
 
 @Log4j2
@@ -65,7 +64,7 @@ public class Harness implements AutoCloseable {
                 log.info("Packet after it was sent\n{}\n", r);
                 log.info("Response\n{}\n", response);
                 return response;
-            }).collect(toList());
+            }).toList();
         }
     }
 
